--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.otempo"
-      android:versionCode="17"
-      android:versionName="2.6">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false">
+      android:versionCode="18"
+      android:versionName="2.7">
+    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4"/>
+	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    
+    <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:label="@string/app_name" android:name=".view.StationActivity" android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -13,7 +19,7 @@
 
     	<activity android:name=".view.Preferences" android:label="@string/preferencesActivity"></activity>
     	<activity android:name=".view.ChangeLog" android:label="@string/changelogMenu"></activity>
-    	<receiver android:label="@string/widget_name" android:name=".view.StationWidget">
+    	<receiver android:label="@string/widget_name" android:name=".view.StationWidget" android:exported="false">
     		<intent-filter>
         		<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
 		    </intent-filter>
@@ -23,11 +29,4 @@
     		android:label="@string/app_name">
     	</service> 
 	</application>
-    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4"/>
-
-	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-<!--	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/> -->
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest> 
