--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
 
     defaultConfig {
         applicationId "org.otempo"
-        minSdkVersion 13
-        targetSdkVersion 13
+        minSdkVersion 16
+        targetSdkVersion 26
     }
 
     buildTypes {
@@ -16,4 +16,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+}
+
+dependencies {
+    implementation 'com.android.support:support-annotations:27.0.2'
+    implementation 'com.android.support:support-v13:26.1.0'
 }
