--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name"
-		android:allowBackup="false">
+		android:allowBackup="false" android:networkSecurityConfig="@xml/network_security_config">
         <activity android:label="@string/app_name" android:name=".view.StationActivity" android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
