--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "27.0.3"
+    buildToolsVersion "28.0.0"
 
     defaultConfig {
         applicationId "org.otempo"
@@ -21,4 +21,5 @@ android {
 dependencies {
     implementation 'com.android.support:support-annotations:27.1.1'
     implementation 'com.android.support:support-v13:26.1.0'
+    implementation 'android.arch.work:work-runtime:1.0.0-alpha08'
 }
