--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,31 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.otempo"
-      android:versionCode="27"
-      android:versionName="3.7">
-	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    package="org.otempo"
+    android:versionCode="27"
+    android:versionName="3.7">
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name"
-		android:allowBackup="false" android:networkSecurityConfig="@xml/network_security_config">
-        <activity android:label="@string/app_name" android:name=".view.StationActivity" android:theme="@android:style/Theme.Black.NoTitleBar">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <application
+        android:allowBackup="false"
+        android:icon="@drawable/icon"
+        android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config">
+        <activity
+            android:name=".view.StationActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".view.Preferences"
+            android:label="@string/preferencesActivity" />
+        <activity
+            android:name=".view.ChangeLog"
+            android:label="@string/changelogMenu" />
 
-    	<activity android:name=".view.Preferences" android:label="@string/preferencesActivity"></activity>
-    	<activity android:name=".view.ChangeLog" android:label="@string/changelogMenu"></activity>
-    	<receiver android:label="@string/widget_name" android:name=".view.StationWidget" android:exported="false">
-    		<intent-filter>
-        		<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-		    </intent-filter>
-		    <meta-data android:name="android.appwidget.provider" android:resource="@xml/widget" />
-    	</receiver>
-    	<service android:name=".service.UpdateService" 
-    		android:label="@string/app_name">
-    	</service> 
-	</application>
-</manifest> 
+        <receiver
+            android:name=".view.StationWidget"
+            android:exported="false"
+            android:label="@string/widget_name">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget" />
+        </receiver>
+
+    </application>
+
+</manifest>
